gcc/testsuite/g++.dg/parse/inline1.C
struct f
{
  int oo()
  {
    return (2; // { dg-error "" }
  }
};
